--- a/src/main/resources/templates/skills/add.html
+++ b/src/main/resources/templates/skills/add.html
@@ -9,14 +9,14 @@
 <form method="post" style="max-width:600px;">
     <div class="form-group">
         <label th:for="name">Skill Name</label>
-        <input class="form-control" th:field="${skill.name}" />
-        <span th:errors="${skill.name}" class="error"></span>
+        <input class="form-control" th:field="${skills.name}" />
+        <span th:errors="${skills.name}" class="error"></span>
     </div>
 
     <div class="form-group">
         <label th:for="description">Skill Description</label>
-        <input class="form-control" th:field="${skill.description}" />
-        <span th:errors="${skill.description}" class="error"></span>
+        <input class="form-control" th:field="${skills.description}" />
+        <span th:errors="${skills.description}" class="error"></span>
     </div>
 
     <input type="submit" value="Add Skill" />
